Implement get_perms along with DRF support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,10 @@ sympy = "^1.12"
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.2"
 pytest-django = "^4.5.2"
-ruff = "^0.1.15"
+ruff = "^0.9"
 django-stubs = "^4.2.7"
 mypy = "^1.8.0"
+pytz = "^2025.1"
 
 [tool.poetry.extras]
 drf = ["djangorestframework"]
@@ -46,3 +47,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.mypy]
 exclude = "examples"
+
+[tool.ruff]
+line-length = 100
