--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,6 @@ python = "^3.11"
 django = "^4.2.10"
 uuid6 = "^2024.1.12"
 djangorestframework = {version = "^3.14.0", optional = true}
-sympy = "^1.12"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.2"
@@ -31,8 +30,11 @@ django-stubs = "^4.2.7"
 mypy = "^1.8.0"
 pytz = "^2025.1"
 
-[tool.poetry.extras]
-drf = ["djangorestframework"]
+[tool.poetry.group.extras]
+optional = true
+
+[tool.poetry.group.extras.dependencies]
+djangorestframework = "^3.15"
 
 [build-system]
 requires = ["poetry-core"]
